--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Handwritten Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;500;600;700&family=Architects+Daughter&family=Kalam:wght@300;400;700&family=Fredoka+One:wght@400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Kalam:wght@300;400;700&family=Caveat:wght@400;500;600;700&family=Architects+Daughter&display=swap" rel="stylesheet">
 
     <meta property="og:title" content="DropLab - From Studio to Stage, All in One Tab" />
     <meta property="og:description" content="DropLab combines music production and DJ performance tools in one browser experience. Create, mix, and perform with professional-grade tools." />
