--- a/index.html
+++ b/index.html
@@ -1,30 +1,29 @@
-
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DropLab - From Studio to Stage, All in One Tab</title>
-    <meta name="description" content="DropLab combines music production and DJ performance tools in one browser experience. Create, mix, and perform with professional-grade tools." />
-    <meta name="author" content="Aarjav & Team" />
-    
-    <!-- Poppins Font -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
-    <meta property="og:title" content="DropLab - From Studio to Stage, All in One Tab" />
-    <meta property="og:description" content="DropLab combines music production and DJ performance tools in one browser experience. Create, mix, and perform with professional-grade tools." />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>DropLab - From Studio to Stage, All in One Tab</title>
+  <meta name="description"
+    content="DropLab combines music production and DJ performance tools in one browser experience. Create, mix, and perform with professional-grade tools." />
+  <meta name="author" content="Aarjav & Team" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-  </head>
+  <!-- Poppins Font -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap"
+    rel="stylesheet">
 
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+  <meta property="og:title" content="DropLab - From Studio to Stage, All in One Tab" />
+  <meta property="og:description"
+    content="DropLab combines music production and DJ performance tools in one browser experience. Create, mix, and perform with professional-grade tools." />
+  <meta property="og:type" content="website" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
